# suaylang

./: .gitignore  .pre-commit-config.yaml  ARTIFACT_EVALUATION.md  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEBUG.md  Dockerfile  LICENSE  Makefile  README.md  RELEASE.md  RELEASE_CHECKLIST.md  ROADMAP.md  SECURITY.md  autocommit.sh  citations.bib  constraints.txt  paper.md  pyproject.toml  requirements-dev.txt  requirements.txt  suay  suay-vm
.github/: CODEOWNERS
baseline_suite/: README.md  fib.py  fib.suay  map_fold.py  map_fold.suay  oob_error.py  oob_error.suay  sum_to_n.py  sum_to_n.suay  variant_match.py  variant_match.suay
benchmarks/: README.md  benchmark_runner.py  results.md  run.py
conformance/: manifest.json
demos/: README.md
docs/: ABLATION.md  ACCESSIBILITY_REDESIGN.md  ACM_REPRODUCIBILITY_CHECKLIST.md  ANNOUNCEMENT.md  ARCHITECTURE.md  ARTIFACT_EVALUATION.md  ASCII_REFERENCE.md  ASCII_SYNTAX.md  BASELINE.md  BASELINES.md  BENCHMARKS.md  BYTECODE.md  CITATION_POLICY.md  CLAIMS.md  CLAIM_EVIDENCE_MATRIX.md  COMMITTEE_MODE_CHECKLIST.md  COMMITTEE_ONEPAGER.md  COMPARISON.md  CONFORMANCE.md  CORRECTNESS.md  DATASET_PROVENANCE.md  DIAGNOSTICS_CONTRACT.md  DISCUSSION_SEED.md  ERROR_CODES.md  ETHICS.md  EVALUATION.md  EVALUATION_PROTOCOL.md  EVIDENCE_MAP.md  EXECUTION_PLAN.md  EXPECTED_OUTCOMES.md  EXPERIMENTS.md  EXPERIMENT_PROTOCOL.md  FALSIFICATION.md  FORMAL_CORE.md  FORMAL_SUMMARY_1PAGE.md  GLOSSARY.md  GRADUATE_FIT.md  GRAMMAR.md  HUMAN_PROXY.md  HUMAN_STUDY.md  (+89 more)
examples/: CLI_USAGE.txt  README.md  bytecode_demo.py  committee_01_basic.suay  committee_02_dispatch.suay  committee_03_cycle.suay  committee_04_error.suay  committee_05_modules.suay  hello.suay  map_demo.suay  stdlib_demo.suay  stdlib_io.suay  step_by_step.py
experiments/: README.md  ablation_runner.py  baseline_runner.py  run_all.py
paper/: TR-2025-01.md  pandoc_tr_pdf_args.txt  paper.md  references.bib  tech_report.md
results/: README.md  ablation.md  baseline.md  baseline_raw.json  bench_raw.json  benchmarks.md  coverage.json  coverage.md  coverage_by_construct.md  diff_report.json  diff_report.md  environment.json  environment.md  golden_diagnostics.json  golden_diagnostics.md  hashes.txt  human_proxy.md  human_study.csv  human_study.md  injection_report.md  manifest.json  mutation_catches.md  negative_example.py  statistics.md
scripts/: bench.py  bench_micro.py  check_links.sh  clean_room_test.sh  demo.py  extract_metrics.py  install.ps1  install.sh  reproduce.ps1  reproduce.sh  smoke.py
showcase/: README.md  state_machine.suay
spec/: backward_compat.md  bytecode_format.md  determinism.md  equivalence_argument.md  errors.md  eval_order.md  grammar.ebnf  grammar.json  lexical.md  memory_model.md  numbers.md  opcodes.md  runtime_invariants.md  scopes.md  side_effects.md  spec_compliance_tests.md  stack_and_recursion.md  strings_unicode.md  types.md  undefined_behavior.md
suaylang/: __init__.py  ast.py  bytecode.py  cli.py  compiler.py  conformance.py  contract.py  errors.py  formatter.py  interpreter.py  lexer.py  lsp_server.py  parser.py  runtime.py  tokens.py  vm.py  vm_cli.py
(+370 files in other folders)
