[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "suaylang"
version = "0.1.0"
description = "SuayLang: an explicit control-flow language (interpreter + bytecode VM)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "SuayLang contributors" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[project.scripts]
suay = "suaylang.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["suaylang*"]
