[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "suaylang"
version = "0.1.0"
description = "SuayLang: an explicit control-flow language (interpreter + bytecode VM)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "SuayLang contributors" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
  "build>=1.0",
  "hypothesis>=6.0",
  "pre-commit>=3.0",
  "pytest>=7.0",
  "ruff>=0.5",
]

[project.scripts]
suay = "suaylang.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["suaylang*"]

[tool.ruff.lint.per-file-ignores]
"examples/bytecode_demo.py" = ["E402"]
